@@ -63,7 +63,7 @@ torrentAdditionDialog::torrentAdditionDialog(QWidget *parent) :
   Preferences pref;
   setupUi(this);
   setAttribute(Qt::WA_DeleteOnClose);
-  setMinimumSize(0, 0);
+  setMinimumSize(10, 10);
   // Icons
   CancelButton->setIcon(IconProvider::instance()->getIcon("dialog-cancel"));
   OkButton->setIcon(IconProvider::instance()->getIcon("list-add"));
