@@ -1,6 +1,7 @@
 * Unreleased - Christophe Dumez <chris@qbittorrent.org> - v2.9.1
     - BUGFIX: Fix ratio calculation for purely seeded torrents
     - I18N: Update Russian translation
+    - COSMETIC: Torrent addition dialog layout fixes
 
 * Sat Oct 08 2011 - Christophe Dumez <chris@qbittorrent.org> - v2.9.0
     - FEATURE: Add file association settings to program preferences (Windows)
